--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>RaspberryVersion</title>
+  <meta http-equiv="refresh" content="1; URL=https://github.com/tho-fu/RaspberryVersion/">
 </head>
 <body>
 Check out this new version. :-)
